--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "eas": "^0.1.0",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
     "expo-barcode-scanner": "^13.0.1",
